# EDGAR

./: .gitignore  Download EDGAR forms.py  Download EDGAR traffic log.py  README.md  pyproject.toml
.github/workflows/: ci.yml
legacy/: README.md
skills/: edgar-research.md
src/edgar_research/: __init__.py  __main__.py  cli.py  client.py  forms.py  index.py  logs.py  mcp_server.py  summarise.py
tests/: test_cli.py  test_client.py  test_forms.py  test_index.py  test_logs.py
