[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgar-research"
version = "0.2.0"
description = "Download and analyse SEC EDGAR filings and traffic log files"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hao Ding", email = "haodingresearch@gmail.com" }]
keywords = ["edgar", "sec", "finance", "research", "retail-attention", "n-csr", "mutual-fund"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "tqdm>=4.66",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
ai = [
    "google-generativeai>=0.5",
    "anthropic>=0.25",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.4",
]
all = [
    "edgar-research[ai,mcp,dev]",
]

[project.scripts]
edgar-research = "edgar_research.cli:main"
edgar-research-mcp = "edgar_research.mcp_server:main"

[project.urls]
Homepage = "https://github.com/haodingresearch/EDGAR"
Paper = "https://ssrn.com/abstract=4992233"
Issues = "https://github.com/haodingresearch/EDGAR/issues"
Author = "https://dinghao.co.uk"

[tool.hatch.build.targets.wheel]
packages = ["src/edgar_research"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"
